--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: webserver
-          image: ghcr.io/rares1511/go-simple-webserver:latest
+          image: ghcr.io/rares1511/ci-cd-lab:latest
           ports:
             - containerPort: 8080
