--- a/manifests/rollout.yaml
+++ b/manifests/rollout.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: webserver
-          image: ghcr.io/rares1511/go-simple-webserver:latest
+          image: ghcr.io/rares1511/ci-cd-lab:latest
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
